fix(javadoc): incorporar responsable de cambios en la auditoría, corregir documentación en javadoc